<resources>
    <string name="app_name">FITNESS 101</string>
    <string name="action_settings">Settings</string>
    <string name="bmi_calculation">BMI CALCULATION</string>
    <string name="weight">Weight (Kg) : </string>
    <string name="recommendation">Recommendation</string>
    <string name="my_bmi">My BMI</string>
    <string name="height">Height (m) : </string>
    <string name="enter_height">Enter Height</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="get_bmi">Get BMI</string>
    <string name="results">Results</string>
    <string name="bmi_explained">BMI Explained</string>
</resources>